--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/qs": "^6.9.7",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "@types/react-paginate": "^7.1.1",
     "@types/react-router-dom": "5.1.7",
+    "@types/react-select": "^5.0.1",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "jwt-decode": "^3.1.2",
@@ -20,10 +22,14 @@
     "qs": "^6.10.3",
     "react": "^17.0.2",
     "react-content-loader": "^6.2.0",
+    "react-currency-input-field": "^3.6.4",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.29.0",
+    "react-paginate": "^8.1.3",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.0",
+    "react-select": "^5.3.2",
+    "react-toastify": "^9.0.4",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
